--- a/frappe/core/doctype/domain_settings/domain_settings.json
+++ b/frappe/core/doctype/domain_settings/domain_settings.json
@@ -1,14 +1,16 @@
 {
+ "add_company_abbr_to_name": 1, 
  "allow_copy": 0, 
  "allow_guest_to_view": 0, 
  "allow_import": 0, 
  "allow_rename": 0, 
+ "append_company_abbr_to_name": "0", 
  "beta": 0, 
  "creation": "2017-05-03 16:28:11.295095", 
  "custom": 0, 
  "docstatus": 0, 
  "doctype": "DocType", 
- "document_type": "", 
+ "document_type": "Setup", 
  "editable_grid": 1, 
  "engine": "InnoDB", 
  "fields": [
@@ -114,7 +116,7 @@
  "issingle": 1, 
  "istable": 0, 
  "max_attachments": 0, 
- "modified": "2017-12-05 17:36:46.842134", 
+ "modified": "2018-11-29 18:56:40.939085", 
  "modified_by": "Administrator", 
  "module": "Core", 
  "name": "Domain Settings", 
