--- a/frappe/core/doctype/system_settings/system_settings.json
+++ b/frappe/core/doctype/system_settings/system_settings.json
@@ -1,14 +1,16 @@
 {
+ "add_company_abbr_to_name": 1, 
  "allow_copy": 0, 
  "allow_guest_to_view": 0, 
  "allow_import": 0, 
  "allow_rename": 0, 
+ "append_company_abbr_to_name": "0", 
  "beta": 0, 
  "creation": "2014-04-17 16:53:52.640856", 
  "custom": 0, 
  "docstatus": 0, 
  "doctype": "DocType", 
- "document_type": "System", 
+ "document_type": "Setup", 
  "editable_grid": 0, 
  "fields": [
   {
@@ -1311,7 +1313,7 @@
  "issingle": 1, 
  "istable": 0, 
  "max_attachments": 0, 
- "modified": "2017-10-15 20:29:46.700707", 
+ "modified": "2018-11-29 18:59:27.658136", 
  "modified_by": "Administrator", 
  "module": "Core", 
  "name": "System Settings", 
